k8s/base/jicofo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jicofo
  labels:
    app: jicofo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jicofo
  template:
    metadata:
      labels:
        app: jicofo
    spec:
      containers:
        - name: jitsi-meet
          image: jitsi/jicofo:stable-5963
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 8888
          readinessProbe:
            tcpSocket:
              port: 8888
      nodeSelector:
        k8s.scaleway.com/pool-name: default
