k8s/base/prosody-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: prosody
  name: prosody
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prosody
  template:
    metadata:
      annotations:
      labels:
        app: prosody
    spec:
      containers:
      - image: jitsi/prosody:stable-6865
        name: prosody
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /http-bind
            port: bosh-insecure
          initialDelaySeconds: 20
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            path: /http-bind
            port: bosh-insecure
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 2
        ports:
        - name: xmpp-c2s
          containerPort: 5222
          protocol: TCP
        - name: xmpp-s2s
          containerPort: 5269
          protocol: TCP
        - name: xmpp-component
          containerPort: 5347
          protocol: TCP
        - name: bosh-insecure
          containerPort: 5280
          protocol: TCP
        - name: bosh-secure
          containerPort: 5281
          protocol: TCP
        volumeMounts:
        - name: prosody-data
          mountPath: /config/data
        resources:
          limits:
            cpu: 3300m
            memory: 15000Mi
          requests:
            cpu: 3000m
            memory: 14000Mi
      nodeSelector:
        k8s.scaleway.com/pool-name: default
      restartPolicy: Always
      volumes:
        - name: prosody-data
          emptyDir: {}
