k8s/base/jitsi-meet-front-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jitsi-meet-front
  labels:
    app: jitsi-meet-front
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      name: http
  selector:
    app: jitsi-meet-front
